优化设置页面: 改进连接状态显示和 Tab URL 持久化
- ProviderSettings: 改进连接状态 UI，显示加载/错误状态
- ProviderSettings: 优化 OAuth auto 模式授权流程，使用后端阻塞等待
- SettingsPage: Tab 状态通过 URL search params 记录，支持刷新保持
- 添加 opencode/ 目录到 gitignore
- 修复 i18n 远程服务地址标签格式

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -71,7 +71,7 @@
       "localDescription": "Use local OpenCode service, suitable for offline use",
       "remote": "Remote Service",
       "remoteDescription": "Connect to remote OpenCode server",
-      "remoteUrl": "Remote Service URL",
+      "remoteUrl": "Remote Service URL:",
       "remoteUrlPlaceholder": "Enter remote service URL",
       "remoteUrlHint": "e.g., http://localhost:8080",
       "status": "Connection Status",
