重构聊天功能: 集成 OpenCode 消息格式和 Parts 渲染系统
- 重构 ChatMessage 组件支持 OpenCode API 的消息结构
- 新增 parts 渲染系统 (PartRenderer) 用于处理不同类型的消息内容
- 新增 ModelSelector 模型选择器组件
- 添加 react-resizable-panels 依赖和 Resizable UI 组件
- 重构 opencode 服务层，删除旧的 opencode-api.ts
- 改进 ChatSidebar：添加刷新按钮、使用容器查询实现响应式布局
- 更新 chat store 和类型定义以适配新的消息格式
- 完善国际化：添加错误提示、状态信息等翻译键
- 优化滚动条样式，改用原生滚动替代 ScrollArea

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -35,7 +35,8 @@
     "older": "Older",
     "noChats": "No chats yet",
     "deleteChat": "Delete chat",
-    "renameChat": "Rename chat"
+    "renameChat": "Rename chat",
+    "refresh": "Refresh session list"
   },
   "chat": {
     "inputPlaceholder": "Type a message...",
@@ -46,7 +47,21 @@
     "copied": "Copied",
     "thinking": "Thinking...",
     "welcome": "Hello! I'm Axon AI assistant. How can I help you today?",
-    "errorMessage": "Sorry, an error occurred. Please try again."
+    "errorMessage": "Sorry, an error occurred. Please try again.",
+    "emptyState": {
+      "title": "Start a conversation",
+      "description": "Send a message to begin chatting with Axon AI assistant."
+    },
+    "inputHint": "Press Enter to send, Shift + Enter for new line",
+    "user": "You",
+    "assistant": "Axon",
+    "selectModel": "Select Model",
+    "noModels": "No models available",
+    "loadingModels": "Loading models...",
+    "modelRequired": "Please select a model first",
+    "connecting": "Connecting to service...",
+    "disconnected": "Service not connected",
+    "emptyResponse": "(Empty response)"
   },
   "settings": {
     "title": "Settings",
@@ -131,7 +146,18 @@
     "serviceUnavailable": "Service unavailable",
     "invalidUrl": "Invalid URL",
     "networkError": "Network error",
-    "unknownError": "Unknown error"
+    "unknownError": "Unknown error",
+    "sendMessageFailed": "Failed to send message",
+    "sendMessageFailedWithDetail": "Failed to send message: {{detail}}",
+    "sessionError": "Session error",
+    "sessionErrorWithDetail": "Session error: {{detail}}",
+    "serviceNotConnected": "Service not connected or no active session",
+    "modelRequired": "Please select a model first",
+    "createSessionFailed": "Failed to create session",
+    "loadSessionsFailed": "Failed to load sessions",
+    "deleteSessionFailed": "Failed to delete session",
+    "modelNotSupported": "Model not supported, please enable it in your Copilot settings",
+    "messageError": "Message generation failed"
   },
   "notifications": {
     "settingsSaved": "Settings saved",
