feat: 添加 Markdown 渲染支持和 MCP 设置页面
- 新增 MarkdownRenderer 组件，支持 GFM 语法和代码高亮
- 新增 McpSettings 设置页面
- 添加 react-markdown, react-syntax-highlighter, remark-gfm 依赖
- 更新设置页面结构和中英文国际化文本

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -68,6 +68,7 @@
     "general": "General",
     "service": "Service",
     "provider": "AI Providers",
+    "mcp": "MCP Servers",
     "appearance": "Appearance",
     "language": "Language",
     "about": "About",
@@ -75,7 +76,9 @@
       "title": "Language Settings",
       "description": "Select application display language",
       "chinese": "Chinese",
-      "english": "English"
+      "english": "English",
+      "chineseDesc": "Simplified Chinese",
+      "englishDesc": "English (US)"
     },
     "serviceSettings": {
       "title": "Service Settings",
@@ -97,13 +100,24 @@
       "reconnect": "Reconnect",
       "startService": "Start Service",
       "stopService": "Stop Service",
-      "restartService": "Restart Service"
+      "restartService": "Restart Service",
+      "backendService": "Backend Service",
+      "backendRunning": "Running (Port: {{port}})",
+      "backendStarting": "Starting...",
+      "backendDownloading": "Downloading ({{progress}}%)",
+      "backendReady": "Ready",
+      "backendStopped": "Stopped",
+      "backendError": "Error: {{message}}",
+      "backendNotInitialized": "Not Initialized"
     },
     "appearanceSettings": {
       "title": "Appearance Settings",
       "description": "Customize application appearance",
       "theme": "Theme",
-      "themeDescription": "Select application theme"
+      "themeDescription": "Select application theme",
+      "lightDescription": "Bright white background",
+      "darkDescription": "Dark background, eye-friendly",
+      "systemDescription": "Automatically switch with system settings"
     },
     "aboutSettings": {
       "title": "About",
@@ -111,7 +125,9 @@
       "description": "Axon is a modern AI desktop client built on OpenCode.",
       "github": "GitHub",
       "documentation": "Documentation",
-      "license": "License"
+      "license": "License",
+      "builtWith": "Built with Tauri, React & OpenCode",
+      "mitLicense": "MIT License"
     },
     "providerSettings": {
       "title": "AI Providers",
@@ -132,7 +148,90 @@
       "howToGetApiKeyDesc": "Visit the provider's website, create an account, and get your API key from settings or API page. Some providers support OAuth authorization.",
       "refresh": "Refresh",
       "noProviders": "No AI providers available",
-      "connectFirst": "Please connect to OpenCode service first"
+      "connectFirst": "Please connect to OpenCode service first",
+      "searchPlaceholder": "Search providers...",
+      "noProvidersFound": "No matching providers found",
+      "models_count": "{{count}} models",
+      "connecting": "Connecting to OpenCode service...",
+      "downloading": "Downloading OpenCode...",
+      "starting": "Starting OpenCode service...",
+      "initializing": "Initializing...",
+      "serviceUnavailable": "Unable to connect to OpenCode service",
+      "retry": "Retry Connection",
+      "hint": "Visit provider websites to get API keys, or configure via environment variables. Some providers support OAuth authorization.",
+      "copySuccess": "Code copied",
+      "copyFailed": "Copy failed",
+      "authLinkCopied": "Authorization link copied to clipboard",
+      "openBrowserFailed": "Unable to open browser",
+      "authSuccess": "{{name}} authorized successfully",
+      "authFailed": "Authorization failed",
+      "noAuthUrl": "No authorization URL received",
+      "enterApiKey": "Please enter API Key",
+      "authDialogTitle": "{{name}} Authorization",
+      "authDialogDescription": "Complete authorization in browser, then enter the code",
+      "deviceCodeHint": "Enter the following code in your browser",
+      "authUrl": "Authorization URL",
+      "copyUrl": "Copy URL",
+      "openInBrowser": "Open in Browser",
+      "authCode": "Authorization Code",
+      "authCodePlaceholder": "Paste authorization code...",
+      "authCodeHint": "After completing authorization in browser, paste the code above",
+      "waitingAuth": "Waiting for browser authorization...",
+      "verifying": "Verifying...",
+      "completeAuth": "Complete Authorization",
+      "oauthAuthorize": "OAuth Authorize"
+    },
+    "mcpSettings": {
+      "title": "MCP Servers",
+      "description": "Manage Model Context Protocol (MCP) server connections",
+      "add": "Add",
+      "searchPlaceholder": "Search MCP servers...",
+      "noServers": "No MCP servers",
+      "noServersFound": "No matching MCP servers found",
+      "statusConnected": "Connected",
+      "statusDisabled": "Disabled",
+      "statusFailed": "Connection Failed",
+      "statusNeedsAuth": "Needs Authorization",
+      "statusNeedsRegistration": "Needs Registration",
+      "statusUnknown": "Unknown Status",
+      "connect": "Connect",
+      "disconnect": "Disconnect",
+      "connectSuccess": "MCP server {{name}} connected",
+      "disconnectSuccess": "MCP server {{name}} disconnected",
+      "connectFailed": "Failed to connect MCP server {{name}}",
+      "disconnectFailed": "Failed to disconnect MCP server {{name}}",
+      "addSuccess": "MCP server {{name}} added",
+      "hint": "MCP servers provide additional tools and resources to extend AI assistant capabilities. Add more MCP servers in opencode.json configuration file.",
+      "addDialogTitle": "Add MCP Server",
+      "addDialogDescription": "Configure a new MCP server connection",
+      "name": "Name",
+      "namePlaceholder": "Enter MCP server name",
+      "type": "Type",
+      "typeLocal": "Local Server",
+      "typeRemote": "Remote Server",
+      "command": "Command",
+      "commandPlaceholder": "npx -y @modelcontextprotocol/server-filesystem",
+      "commandHint": "Command to run the MCP server (space-separated)",
+      "commandRequired": "Please enter a command",
+      "environment": "Environment Variables",
+      "environmentPlaceholder": "{\"KEY\": \"value\"}",
+      "environmentHint": "Environment variables in JSON format",
+      "invalidEnvFormat": "Invalid environment variable format, please use JSON",
+      "url": "Server URL",
+      "urlPlaceholder": "https://example.com/mcp",
+      "urlRequired": "Please enter server URL",
+      "timeout": "Timeout (ms)",
+      "timeoutHint": "Default 5000 ms",
+      "enabled": "Enabled",
+      "connecting": "Connecting to OpenCode service...",
+      "downloading": "Downloading OpenCode...",
+      "starting": "Starting OpenCode service...",
+      "initializing": "Initializing...",
+      "serviceUnavailable": "Unable to connect to OpenCode service",
+      "retry": "Retry Connection",
+      "editDialogTitle": "Edit MCP Server",
+      "editDialogDescription": "Modify MCP server configuration",
+      "editSuccess": "MCP server {{name}} updated"
     }
   },
   "status": {
