--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -68,6 +68,7 @@
     "general": "通用",
     "service": "服务",
     "provider": "AI 服务商",
+    "mcp": "MCP 服务器",
     "appearance": "外观",
     "language": "语言",
     "about": "关于",
@@ -75,7 +76,9 @@
       "title": "语言设置",
       "description": "选择应用程序显示语言",
       "chinese": "中文",
-      "english": "English"
+      "english": "English",
+      "chineseDesc": "简体中文",
+      "englishDesc": "English (US)"
     },
     "serviceSettings": {
       "title": "服务设置",
@@ -97,13 +100,24 @@
       "reconnect": "重新连接",
       "startService": "启动服务",
       "stopService": "停止服务",
-      "restartService": "重启服务"
+      "restartService": "重启服务",
+      "backendService": "后端服务",
+      "backendRunning": "运行中 (端口: {{port}})",
+      "backendStarting": "启动中...",
+      "backendDownloading": "下载中 ({{progress}}%)",
+      "backendReady": "就绪",
+      "backendStopped": "已停止",
+      "backendError": "错误: {{message}}",
+      "backendNotInitialized": "未初始化"
     },
     "appearanceSettings": {
       "title": "外观设置",
       "description": "自定义应用程序外观",
       "theme": "主题",
-      "themeDescription": "选择应用程序主题"
+      "themeDescription": "选择应用程序主题",
+      "lightDescription": "明亮的白色背景",
+      "darkDescription": "深色背景，护眼模式",
+      "systemDescription": "跟随系统设置自动切换"
     },
     "aboutSettings": {
       "title": "关于",
@@ -111,7 +125,9 @@
       "description": "Axon 是一个现代化的 AI 桌面客户端，基于 OpenCode 构建。",
       "github": "GitHub",
       "documentation": "文档",
-      "license": "许可证"
+      "license": "许可证",
+      "builtWith": "使用 Tauri, React & OpenCode 构建",
+      "mitLicense": "MIT 许可证"
     },
     "providerSettings": {
       "title": "AI 服务提供商",
@@ -132,7 +148,90 @@
       "howToGetApiKeyDesc": "访问对应服务商的官网，注册账号后在设置或 API 页面获取 API Key。部分服务商支持 OAuth 授权，可直接点击授权按钮完成配置。",
       "refresh": "刷新",
       "noProviders": "暂无可用的 AI 服务提供商",
-      "connectFirst": "请先连接到 OpenCode 服务"
+      "connectFirst": "请先连接到 OpenCode 服务",
+      "searchPlaceholder": "搜索服务商...",
+      "noProvidersFound": "未找到匹配的服务商",
+      "models_count": "{{count}} 模型",
+      "connecting": "正在连接到 OpenCode 服务...",
+      "downloading": "正在下载 OpenCode...",
+      "starting": "正在启动 OpenCode 服务...",
+      "initializing": "正在初始化...",
+      "serviceUnavailable": "无法连接到 OpenCode 服务",
+      "retry": "重试连接",
+      "hint": "访问服务商官网获取 API Key，或使用环境变量配置。部分服务商支持 OAuth 一键授权。",
+      "copySuccess": "验证码已复制",
+      "copyFailed": "复制失败",
+      "authLinkCopied": "授权链接已复制到剪贴板",
+      "openBrowserFailed": "无法打开浏览器",
+      "authSuccess": "{{name}} 授权成功",
+      "authFailed": "授权失败",
+      "noAuthUrl": "未获取到授权链接",
+      "enterApiKey": "请输入 API Key",
+      "authDialogTitle": "{{name}} 授权",
+      "authDialogDescription": "请在浏览器中完成授权，然后输入授权码",
+      "deviceCodeHint": "请在浏览器中输入以下验证码",
+      "authUrl": "授权链接",
+      "copyUrl": "复制链接",
+      "openInBrowser": "在浏览器中打开",
+      "authCode": "授权码",
+      "authCodePlaceholder": "粘贴授权码...",
+      "authCodeHint": "在浏览器完成授权后，复制授权码并粘贴到上方输入框",
+      "waitingAuth": "等待浏览器授权完成...",
+      "verifying": "验证中...",
+      "completeAuth": "完成授权",
+      "oauthAuthorize": "OAuth 授权"
+    },
+    "mcpSettings": {
+      "title": "MCP 服务器",
+      "description": "管理 Model Context Protocol (MCP) 服务器连接",
+      "add": "添加",
+      "searchPlaceholder": "搜索 MCP 服务器...",
+      "noServers": "暂无 MCP 服务器",
+      "noServersFound": "未找到匹配的 MCP 服务器",
+      "statusConnected": "已连接",
+      "statusDisabled": "已禁用",
+      "statusFailed": "连接失败",
+      "statusNeedsAuth": "需要授权",
+      "statusNeedsRegistration": "需要注册",
+      "statusUnknown": "未知状态",
+      "connect": "连接",
+      "disconnect": "断开",
+      "connectSuccess": "MCP 服务器 {{name}} 已连接",
+      "disconnectSuccess": "MCP 服务器 {{name}} 已断开",
+      "connectFailed": "连接 MCP 服务器 {{name}} 失败",
+      "disconnectFailed": "断开 MCP 服务器 {{name}} 失败",
+      "addSuccess": "MCP 服务器 {{name}} 已添加",
+      "hint": "MCP 服务器提供额外的工具和资源，可以扩展 AI 助手的能力。在 opencode.json 配置文件中添加更多 MCP 服务器。",
+      "addDialogTitle": "添加 MCP 服务器",
+      "addDialogDescription": "配置新的 MCP 服务器连接",
+      "name": "名称",
+      "namePlaceholder": "输入 MCP 服务器名称",
+      "type": "类型",
+      "typeLocal": "本地服务器",
+      "typeRemote": "远程服务器",
+      "command": "命令",
+      "commandPlaceholder": "npx -y @modelcontextprotocol/server-filesystem",
+      "commandHint": "运行 MCP 服务器的命令（空格分隔）",
+      "commandRequired": "请输入命令",
+      "environment": "环境变量",
+      "environmentPlaceholder": "{\"KEY\": \"value\"}",
+      "environmentHint": "JSON 格式的环境变量",
+      "invalidEnvFormat": "环境变量格式无效，请使用 JSON 格式",
+      "url": "服务器 URL",
+      "urlPlaceholder": "https://example.com/mcp",
+      "urlRequired": "请输入服务器 URL",
+      "timeout": "超时时间 (毫秒)",
+      "timeoutHint": "默认 5000 毫秒",
+      "enabled": "启用",
+      "connecting": "正在连接到 OpenCode 服务...",
+      "downloading": "正在下载 OpenCode...",
+      "starting": "正在启动 OpenCode 服务...",
+      "initializing": "正在初始化...",
+      "serviceUnavailable": "无法连接到 OpenCode 服务",
+      "retry": "重试连接",
+      "editDialogTitle": "编辑 MCP 服务器",
+      "editDialogDescription": "修改 MCP 服务器配置",
+      "editSuccess": "MCP 服务器 {{name}} 已更新"
     }
   },
   "status": {
