feat: 添加工作区管理和模型搜索功能
- 新增 workspace store 管理项目工作区状态
- 添加目录选择器和文件系统命令 (tauri-plugin-dialog)
- 重构 ModelSelector 支持搜索过滤 (cmdk)
- 新增 ChatProvider 集中管理聊天状态
- 添加 Popover 和 Command UI 组件
- 侧边栏新增打开项目按钮
- 引入 zustand 作为状态管理库

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -19,6 +19,8 @@
   },
   "titlebar": {
     "settings": "Settings",
+    "default": "Default",
+    "defaultWorkspace": "Default Workspace",
     "theme": {
       "light": "Light Mode",
       "dark": "Dark Mode",
@@ -27,6 +29,7 @@
   },
   "sidebar": {
     "newChat": "New Chat",
+    "openProject": "Open Project",
     "searchPlaceholder": "Search chats...",
     "today": "Today",
     "yesterday": "Yesterday",
@@ -59,6 +62,8 @@
     "noModels": "No models available",
     "loadingModels": "Loading models...",
     "modelRequired": "Please select a model first",
+    "searchModel": "Search models...",
+    "noModelFound": "No matching model found",
     "connecting": "Connecting to service...",
     "disconnected": "Service not connected",
     "emptyResponse": "(Empty response)"
