feat: 重构路径管理、添加 MCP headers 配置和服务重启功能
- 后端：使用 Tauri API 重构路径工具，移除 directories 依赖
- 后端：为 opencode 服务添加配置隔离（环境变量）
- 前端：MCP 设置支持远程服务 HTTP Headers 配置
- 前端：服务状态 Tooltip 添加重启按钮
- UI：扩展 Tooltip 组件支持自定义箭头样式

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -246,6 +246,10 @@
       "urlRequired": "Please enter server URL",
       "timeout": "Timeout (ms)",
       "timeoutHint": "Default 5000 ms",
+      "headers": "HTTP Headers",
+      "headersPlaceholder": "{\"Authorization\": \"Bearer token\"}",
+      "headersHint": "HTTP headers in JSON format (e.g., API Key, Authorization)",
+      "invalidHeadersFormat": "Invalid headers format, please use JSON",
       "enabled": "Enabled",
       "connecting": "Connecting to OpenCode service...",
       "downloading": "Downloading OpenCode...",
