--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -246,6 +246,10 @@
       "urlRequired": "请输入服务器 URL",
       "timeout": "超时时间 (毫秒)",
       "timeoutHint": "默认 5000 毫秒",
+      "headers": "HTTP 请求头",
+      "headersPlaceholder": "{\"Authorization\": \"Bearer token\"}",
+      "headersHint": "JSON 格式的 HTTP 请求头（如 API Key、Authorization 等）",
+      "invalidHeadersFormat": "请求头格式无效，请使用 JSON 格式",
       "enabled": "启用",
       "connecting": "正在连接到 OpenCode 服务...",
       "downloading": "正在下载 OpenCode...",
