feat: 添加会话搜索、思考指示器和推理深度选择器，优化配置隔离与状态刷新
后端优化:
- 使用 XDG 环境变量实现 opencode 完全配置隔离
- 简化路径管理模块，修复 Clippy 警告 (PathBuf → Path)
- 使用 #[default] 属性重构 Default trait 实现

MCP 与 Provider 改进:
- MCP: 改用 config.update API 持久化配置
- MCP: 添加服务重启刷新功能
- Provider: OAuth 和 API Key 保存后调用 instance.dispose 刷新缓存

聊天功能增强:
- 添加 SessionSearchDialog 会话历史搜索组件
- 添加 ThinkingIndicator 思考状态指示器
- 添加 VariantSelector 推理深度选择器
- 国际化: 添加新组件的中英文翻译

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -83,9 +83,49 @@
     "modelRequired": "Please select a model first",
     "searchModel": "Search models...",
     "noModelFound": "No matching model found",
+    "thinkingEffort": "Thinking Effort",
+    "variant": {
+      "default": "Default",
+      "defaultDesc": "Use model default settings",
+      "none": "None",
+      "noneDesc": "Disable reasoning, fast response",
+      "minimal": "Minimal",
+      "minimalDesc": "Minimal reasoning depth",
+      "low": "Low",
+      "lowDesc": "Less reasoning thinking",
+      "medium": "Medium",
+      "mediumDesc": "Balance reasoning and speed",
+      "high": "High",
+      "highDesc": "Deep reasoning thinking",
+      "xhigh": "X-High",
+      "xhighDesc": "Extra deep reasoning",
+      "max": "Max",
+      "maxDesc": "Maximum reasoning depth"
+    },
+    "thinkingStatus": {
+      "gathering": "Gathering thoughts",
+      "thinking": "Thinking deeply",
+      "searching": "Searching codebase",
+      "reading": "Reading files",
+      "editing": "Making edits",
+      "running": "Running commands",
+      "delegating": "Delegating work",
+      "planning": "Planning steps",
+      "fetching": "Fetching web",
+      "considering": "Considering"
+    },
     "connecting": "Connecting to service...",
     "disconnected": "Service not connected",
-    "emptyResponse": "(Empty response)"
+    "emptyResponse": "(Empty response)",
+    "sessionSearch": {
+      "title": "Search Sessions",
+      "placeholder": "Search sessions...",
+      "noResults": "No matching sessions found",
+      "navigate": "Navigate",
+      "select": "Select",
+      "close": "Close",
+      "sessions": "sessions"
+    }
   },
   "settings": {
     "title": "Settings",
@@ -259,7 +299,8 @@
       "retry": "Retry Connection",
       "editDialogTitle": "Edit MCP Server",
       "editDialogDescription": "Modify MCP server configuration",
-      "editSuccess": "MCP server {{name}} updated"
+      "editSuccess": "MCP server {{name}} updated",
+      "refreshSuccess": "MCP server list refreshed"
     }
   },
   "status": {
