feat: 添加项目管理功能，重构侧边栏以项目分组展示会话
- 新增 ProjectSidebar 组件，替代 ChatSidebar
- 添加项目状态管理（project.ts）和 Provider
- 支持打开/关闭项目、展开/折叠项目
- 默认项目始终显示在顶部且不可删除
- 关闭项目时同时删除该项目下的所有会话
- 添加中英文国际化支持

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -30,6 +30,9 @@
   "sidebar": {
     "newChat": "New Chat",
     "openProject": "Open Project",
+    "closeProject": "Close Project",
+    "projects": "Projects",
+    "noProjects": "No projects",
     "searchPlaceholder": "Search chats...",
     "today": "Today",
     "yesterday": "Yesterday",
