feat: 添加 VSCode 风格项目选择器，将打开项目功能移至标题栏
- 新增 ProjectPicker 组件，支持搜索和快捷键导航
- 将项目选择器集成到标题栏中间区域
- 从侧边栏移除打开项目按钮，简化界面
- 优化 Dialog 组件：位置改为距顶部 15%，使用滑动动画
- 更新 AGENTS.md 添加 Dialog 设计规范
- 添加项目选择器相关国际化文案

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -27,6 +27,21 @@
       "system": "System"
     }
   },
+  "projectPicker": {
+    "searchPlaceholder": "Search projects or enter path...",
+    "noResults": "No matching projects found",
+    "actions": "Actions",
+    "openFolder": "Open Folder...",
+    "openFolderDesc": "Browse and select a project folder",
+    "recentProjects": "Recent Projects",
+    "searchResults": "Search Results",
+    "current": "Current",
+    "navigate": "Navigate",
+    "select": "Select",
+    "close": "Close",
+    "projectsCount": "projects",
+    "clickToSwitch": "Click to switch project"
+  },
   "sidebar": {
     "newChat": "New Chat",
     "openProject": "Open Project",
