feat: 添加 VSCode 风格 Activity Bar 活动栏组件
- 新增 ActivityBar 组件，支持左右位置切换
- 新增右键菜单支持（context-menu）
- 添加侧边栏显示/隐藏控制
- 更新 UI 设计系统文档，完善 Zed 风格设计规范
- 移除标题栏设置按钮（功能移至活动栏）
- 添加活动栏相关国际化翻译

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -27,6 +27,15 @@
       "system": "System"
     }
   },
+  "activityBar": {
+    "chat": "Chat",
+    "search": "Search",
+    "extensions": "Extensions",
+    "moveToLeft": "Move to Left",
+    "moveToRight": "Move to Right",
+    "hideSidebar": "Hide Sidebar",
+    "showSidebar": "Show Sidebar"
+  },
   "projectPicker": {
     "searchPlaceholder": "Search projects or enter path...",
     "noResults": "No matching projects found",
