fix: 优化用户取消消息生成时的 UI 反馈
- 区分 MessageAbortedError（用户主动取消）和真正的错误
- 用户取消时显示已停止提示，使用柔和的样式
- 取消操作不再在顶部显示错误通知
- 添加 messageInterrupted 国际化文案

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -352,7 +352,8 @@
     "loadSessionsFailed": "Failed to load sessions",
     "deleteSessionFailed": "Failed to delete session",
     "modelNotSupported": "Model not supported, please enable it in your Copilot settings",
-    "messageError": "Message generation failed"
+    "messageError": "Message generation failed",
+    "messageInterrupted": "Interrupted"
   },
   "notifications": {
     "settingsSaved": "Settings saved",
