feat: 添加工作区侧边栏文件浏览器功能
- 新增 WorkspaceSidebar 组件替代 ProjectSidebar，整合会话列表和文件浏览器
- 新增 FileExplorer 组件支持目录树展示和展开/折叠
- 新增 CollapsiblePanel 可折叠面板组件
- 后端新增 read_directory 命令用于读取目录内容
- 优化滚动条样式为 4px 宽度的淡色透明效果
- 添加资源管理器相关的中英文翻译

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -56,6 +56,7 @@
     "openProject": "Open Project",
     "closeProject": "Close Project",
     "projects": "Projects",
+    "sessionList": "Sessions",
     "noProjects": "No projects",
     "searchPlaceholder": "Search chats...",
     "today": "Today",
@@ -66,7 +67,17 @@
     "noChats": "No chats yet",
     "deleteChat": "Delete chat",
     "renameChat": "Rename chat",
-    "refresh": "Refresh session list"
+    "refresh": "Refresh",
+    "removeProject": "Remove Project",
+    "workspace": "Workspace",
+    "explorer": "Explorer",
+    "refreshExplorer": "Refresh file list",
+    "explorerPanel": {
+      "noProject": "No project selected",
+      "selectSession": "Select a session to view project files",
+      "empty": "Directory is empty",
+      "loadError": "Failed to load"
+    }
   },
   "chat": {
     "inputPlaceholder": "Type a message...",
