--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -56,6 +56,7 @@
     "openProject": "打开项目",
     "closeProject": "关闭项目",
     "projects": "项目",
+    "sessionList": "会话列表",
     "noProjects": "暂无项目",
     "searchPlaceholder": "搜索对话...",
     "today": "今天",
@@ -66,7 +67,17 @@
     "noChats": "暂无对话",
     "deleteChat": "删除对话",
     "renameChat": "重命名对话",
-    "refresh": "刷新会话列表"
+    "refresh": "刷新",
+    "removeProject": "移除项目",
+    "workspace": "工作区",
+    "explorer": "资源管理器",
+    "refreshExplorer": "刷新文件列表",
+    "explorerPanel": {
+      "noProject": "未选择项目",
+      "selectSession": "选择一个会话以查看项目文件",
+      "empty": "目录为空",
+      "loadError": "加载失败"
+    }
   },
   "chat": {
     "inputPlaceholder": "输入消息...",
