feat: 新增文件预览功能与工作区布局持久化
- 新增编辑器面板组件，支持文件预览和多标签页管理
- 新增工作区布局持久化（侧边栏宽度、编辑器面板比例、打开的标签页）
- 新增 read_file_content Tauri 命令用于读取文件内容
- 支持编辑器与聊天分屏布局，可拖拽调整面板比例
- 标题栏优化：项目选择器移至左侧，支持 Ctrl+O 快捷键
- 国际化调整：MCP 服务器「连接/断开」改为「启用/禁用」

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -296,12 +296,12 @@
       "statusNeedsAuth": "Needs Authorization",
       "statusNeedsRegistration": "Needs Registration",
       "statusUnknown": "Unknown Status",
-      "connect": "Connect",
-      "disconnect": "Disconnect",
-      "connectSuccess": "MCP server {{name}} connected",
-      "disconnectSuccess": "MCP server {{name}} disconnected",
-      "connectFailed": "Failed to connect MCP server {{name}}",
-      "disconnectFailed": "Failed to disconnect MCP server {{name}}",
+      "connect": "Enable",
+      "disconnect": "Disable",
+      "connectSuccess": "MCP server {{name}} enabled",
+      "disconnectSuccess": "MCP server {{name}} disabled",
+      "connectFailed": "Failed to enable MCP server {{name}}",
+      "disconnectFailed": "Failed to disable MCP server {{name}}",
       "addSuccess": "MCP server {{name}} added",
       "hint": "MCP servers provide additional tools and resources to extend AI assistant capabilities. Add more MCP servers in opencode.json configuration file.",
       "addDialogTitle": "Add MCP Server",
@@ -350,8 +350,8 @@
   "statusBar": {
     "mcpServers": "MCP Servers",
     "noServers": "No MCP servers",
-    "connect": "Connect",
-    "disconnect": "Disconnect",
+    "connect": "Enable",
+    "disconnect": "Disable",
     "restartAll": "Restart All",
     "stopAll": "Stop All",
     "enabled": "Enabled",
