--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -296,12 +296,12 @@
       "statusNeedsAuth": "需要授权",
       "statusNeedsRegistration": "需要注册",
       "statusUnknown": "未知状态",
-      "connect": "连接",
-      "disconnect": "断开",
-      "connectSuccess": "MCP 服务器 {{name}} 已连接",
-      "disconnectSuccess": "MCP 服务器 {{name}} 已断开",
-      "connectFailed": "连接 MCP 服务器 {{name}} 失败",
-      "disconnectFailed": "断开 MCP 服务器 {{name}} 失败",
+      "connect": "启用",
+      "disconnect": "禁用",
+      "connectSuccess": "MCP 服务器 {{name}} 已启用",
+      "disconnectSuccess": "MCP 服务器 {{name}} 已禁用",
+      "connectFailed": "启用 MCP 服务器 {{name}} 失败",
+      "disconnectFailed": "禁用 MCP 服务器 {{name}} 失败",
       "addSuccess": "MCP 服务器 {{name}} 已添加",
       "hint": "MCP 服务器提供额外的工具和资源，可以扩展 AI 助手的能力。在 opencode.json 配置文件中添加更多 MCP 服务器。",
       "addDialogTitle": "添加 MCP 服务器",
@@ -350,8 +350,8 @@
   "statusBar": {
     "mcpServers": "MCP 服务器",
     "noServers": "暂无 MCP 服务器",
-    "connect": "连接",
-    "disconnect": "断开",
+    "connect": "启用",
+    "disconnect": "禁用",
     "restartAll": "重启全部",
     "stopAll": "停止全部",
     "enabled": "已启用",
