feat: 新增 opencode 版本管理、Monaco 编辑器与设置持久化
主要更新：
- 新增版本检测与自动更新功能 (get_version_info, check_for_update, update_opencode)
- 新增 SettingsManager 模块，持久化应用设置（自定义 opencode 路径、自动更新等）
- 集成 Monaco Editor 替代原有文件预览，支持语法高亮和编辑
- CodeBlock/MarkdownRenderer 组件支持亮色/暗色主题动态切换
- 新增 Progress 进度条组件
- 新增 write_file_content 命令，支持文件写入
- 优化 Windows 平台进程终止逻辑，使用 taskkill 确保子进程清理
- 添加 semver 依赖用于语义化版本比较

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -210,7 +210,21 @@
       "backendReady": "Ready",
       "backendStopped": "Stopped",
       "backendError": "Error: {{message}}",
-      "backendNotInitialized": "Not Initialized"
+      "backendNotInitialized": "Not Initialized",
+      "versionTitle": "Version & Updates",
+      "versionDescription": "Manage OpenCode version and auto-update settings",
+      "installedVersion": "Installed: {{version}}",
+      "latestVersion": "Latest: {{version}}",
+      "notInstalled": "Not installed",
+      "checkUpdate": "Check for Update",
+      "updateAvailable": "New version {{version}} available",
+      "upToDate": "You're up to date",
+      "updateNow": "Update Now",
+      "updateSuccess": "Update successful",
+      "updateFailed": "Update failed",
+      "autoUpdate": "Auto Update",
+      "autoUpdateDescription": "Automatically check and update OpenCode to the latest version on startup",
+      "downloading": "Downloading..."
     },
     "appearanceSettings": {
       "title": "Appearance Settings",
