--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -210,7 +210,21 @@
       "backendReady": "就绪",
       "backendStopped": "已停止",
       "backendError": "错误: {{message}}",
-      "backendNotInitialized": "未初始化"
+      "backendNotInitialized": "未初始化",
+      "versionTitle": "版本与更新",
+      "versionDescription": "管理 OpenCode 版本和自动更新设置",
+      "installedVersion": "已安装: {{version}}",
+      "latestVersion": "最新版本: {{version}}",
+      "notInstalled": "未安装",
+      "checkUpdate": "检查更新",
+      "updateAvailable": "发现新版本 {{version}}",
+      "upToDate": "已是最新版本",
+      "updateNow": "立即更新",
+      "updateSuccess": "更新成功",
+      "updateFailed": "更新失败",
+      "autoUpdate": "自动更新",
+      "autoUpdateDescription": "启动时自动检查并更新 OpenCode 到最新版本",
+      "downloading": "正在下载..."
     },
     "appearanceSettings": {
       "title": "外观设置",
