feat: 新增工具列表功能到状态栏并集成 opencode 源码
- 在状态栏添加工具列表显示，支持按类别分组查看
- 新增 tools.ts 服务模块，提供工具信息获取和分类功能
- 添加相关 i18n 翻译键
- 移除 .gitignore 中对 opencode 目录的忽略，集成源码用于功能调研与对接参考

--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -373,7 +373,18 @@
     "failed": "连接失败",
     "needsAuth": "需要授权",
     "needsRegistration": "需要注册",
-    "unknown": "未知状态"
+    "unknown": "未知状态",
+    "tools": "工具",
+    "availableTools": "可用工具",
+    "totalTools": "共 {{count}} 个工具",
+    "noTools": "暂无可用工具"
+  },
+  "editor": {
+    "refresh": "刷新文件",
+    "closeTab": "关闭",
+    "closeOthers": "关闭其他",
+    "closeAll": "关闭全部",
+    "emptyFile": "文件为空"
   },
   "errors": {
     "connectionFailed": "连接失败",
